[build-system]
requires = ['setuptools']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ['src']
namespaces = true

[project]
name = 'xc_enc'
version = '1.0.0'
description = 'Encrypt files.'
readme = 'README.md'
dependencies = [
    'cryptography==42.0.7',
    'tomlkit==0.12.4'
]
requires-python = '>= 3.8'

[project.scripts]
xc_enc = 'xc_enc:main'

[project.urls]
Repository = 'https://github.com/xcFelix/xc_enc'
